Fri Oct  3 07:44:15 CEST 2014
n/dropbox-2.10.30-x86-1_microlinux.txz: Added.
+--------------------------+
Thu Sep 25 11:04:53 CEST 2014
kde/kdenlive-0.9.6-i486-1_microlinux.txz: Added.
  Kdenlive can only be installed on the KDE-based standard edition of MLED.
	Version 0.9.8 has a nasty localization bug in non-english versions. Until
	this gets sorted out, we're going with the previous version, which works
	fine.
+--------------------------+
Sat Sep 20 08:30:37 CEST 2014
xap/aMule-2.3.1-i486-3_microlinux.txz: Added.
xap/gtkcdlabel-1.15-noarch-2_microlinux.txz: Added.
xap/easytag-2.1.10-i486-1_microlinux.txz: Added.
xap/poedit-1.4.6.1-i486-3_microlinux.txz: Added.
+--------------------------+
Fri Sep 19 09:01:40 CEST 2014
xap/filezilla-3.7.3-i486-3_microlinux.txz: Added.
xap/virtualbox-4.2.26-i486-1_microlinux.txz: Added.
xap/virtualbox-kernel-4.2.26_3.10.17_smp-i486-1_microlinux.txz: Added.
xap/virtualbox-extension-pack-4.2.26-i486-1_microlinux.txz: Added.
+--------------------------+