@@ -1,0 +1,25 @@
+Unetbootin should (or even needs to) be invoked from a root
+login prompt as it needs access to drive devices.
+Unless you have modified the default PATH inheritance, sudo
+won't work properly (at least syslinux will not be found).
+
+It sometimes reacts in a strange way when it comes to language settings.
+When the detection fails, there is a good chance that it will display
+in (taiwanese) chinese, as it seems to use the last language file it
+can find (which is unetbootin_zh_TW.qm).
+
+If unetbootin does not respect your LANG settings, especially when
+invoked from the menu of an user account with kdesu, there are two ways
+to change it's behaviour:
+
+1. Open /usr/share/applications/unetbootin.desktop and change the Exec
+   entry to something like this:
+
+     Exec=/usr/bin/unetbootin lang=en
+
+   The available language files are in /usr/share/applications/unetbootin.
+
+2. Open a terminal and start unetbootin like this:
+
+   su -c '/usr/bin/unetbootin lang=de'
+
