@@ -1,0 +1,111 @@
+#!/bin/sh
+# Slackware build script for unetbootin
+# Written by Jens Weber <jens@tuxane.com>
+#
+# Modified by Niki Kovacs <info@microlinux.fr>
+#
+# v565: (jw) initial version 01/06/2012
+# v575: (jw) updated version
+# v581: (jw) update to  version 581 11 Dec 2012
+# v583: (jw) version bump to v583 22 Feb 2013
+# v585: (jw) version bump to v585 01 Feb 2014
+
+PRGNAM=unetbootin
+VERSION=585
+BUILD=${BUILD:-1}
+TAG=${TAG:-_microlinux}
+
+NUMJOBS=${NUMJOBS:--j5}
+
+if [ -z "$ARCH" ]; then
+  case "$( uname -m )" in
+    i?86) ARCH=i486 ;;
+    arm*) ARCH=arm ;;
+       *) ARCH=$( uname -m ) ;;
+  esac
+fi
+
+CWD=$(pwd)
+TMP=${TMP:-/tmp/microlinux}
+PKG=$TMP/package-$PRGNAM
+OUTPUT=${OUTPUT:-/tmp}
+
+if [ "$ARCH" = "i486" ]; then
+   LIBDIRSUFFIX=""
+   archname="i386"
+elif [ "$ARCH" = "i686" ]; then
+    LIBDIRSUFFIX=""
+    archname="i386"
+elif [ "$ARCH" = "x86_64" ]; then
+    LIBDIRSUFFIX="64"
+    archname="amd64"
+else
+    LIBDIRSUFFIX=""
+    archname=""
+fi
+
+set -eu
+
+wget -c http://downloads.sourceforge.net/$PRGNAM/$PRGNAM-source-$VERSION.tar.gz
+
+PTMP=$TMP/$PRGNAM # convenience variable
+
+rm -rf $PKG $PTMP
+mkdir -p $TMP $PKG $OUTPUT $PTMP
+
+cd $PTMP
+tar xvf $CWD/${PRGNAM}-source-$(echo $VERSION).tar.gz
+chown -R root:root .
+find -L . \
+  \( -perm 777 -o -perm 775 -o -perm 750 -o -perm 711 -o -perm 555 -o -perm 511 \) \
+  -exec chmod 755 {} \; -o \
+  \( -perm 666 -o -perm 664 -o -perm 600 -o -perm 444 -o -perm 440 -o -perm 400 \) \
+  -exec chmod 644 {} \;
+
+lupdate unetbootin.pro
+lrelease unetbootin.pro
+qmake -config release "DEFINES += NOSTATIC" "RESOURCES -= unetbootin.qrc"
+make $NUMJOBS
+strip --strip-unneeded $PRGNAM
+
+mkdir -p $PKG/usr/bin
+cp -a $PTMP/$PRGNAM $PKG/usr/bin/$PRGNAM
+
+mkdir -p $PKG/usr/share/applications
+cp -a $PTMP/$PRGNAM.desktop  $PKG/usr/share/applications/$PRGNAM.desktop
+
+mkdir -p $PKG/usr/share/$PRGNAM
+for file in ${PRGNAM}*.qm; do
+ 	cp -a ${file} $PKG/usr/share/$PRGNAM/
+done
+for file in ${PRGNAM}*.png; do
+ 	size="${file/${PRGNAM}_}"
+ 	size="${size/.png}x${size/.png}"
+ 	mkdir -p $PKG/usr/share/icons/hicolor/${size}/apps
+ 	cp -a ${file} $PKG/usr/share/icons/hicolor/${size}/apps/$(echo $file | tr -d _$size)
+done
+
+mkdir -p $PKG/usr/share/icons/hicolor/scalable/apps/
+cp -a $PTMP/unetbootin_icons.svg $PKG/usr/share/icons/hicolor/scalable/apps/$PRGNAM.svg
+
+find $PKG/usr/share/icons -type f -exec chmod 0644 {} \;
+
+mkdir -p $PKG/usr/share/pixmaps/
+cp -a $PTMP/unetbootin_icons.svg $PKG/usr/share/pixmaps/$PRGNAM.svg
+
+mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
+cp -a README.TXT INSTALL  $PKG/usr/doc/$PRGNAM-$VERSION
+cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
+cat $CWD/README.issues > $PKG/usr/doc/$PRGNAM-$VERSION/README.issues
+chmod 0644 $PKG/usr/doc/$PRGNAM-$VERSION/INSTALL
+
+mkdir -p $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+cat $CWD/doinst.sh > $PKG/install/doinst.sh
+
+cd $PKG
+/sbin/makepkg -l y -c n $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD$TAG.${PKGTYPE:-txz}
+
+# Cleanup
+# cd $TMP
+# rm -rf $PRGNAM-$VERSION $PKG
